------------------- Upcoming version 7.1 -----------------------------

------------------- Released version 7.0 -----------------------------

Features and improvements:

- Add support for recording calls to OpenCL 2.1/2.2 functions.
- Add support for recording events from the Kokkos tools interface.
  The Kokkos CUDA and HIP back ends are stable on a single device
  (see OPEN_ISSUES). The OpenMP and Pthread back ends should be
  treated as experimental.
- Issue individual I/O events in POSIX vectorized I/O operations.
- Add recording of transfer offsets of POSIX I/O operations.
- Add wrapping of more vectorized I/O operations:
  - `preadv2`,  `preadv64`,  `preadv64v2`
  - `pwritev2`, `pwritev64`, `pwritev64v2`
- Add stripe count/size for recorded files on the Lustre file system.
- Add process ID (PID) and thread ID (TID) as attributes on program
  begin or thread creation events respectivly.
- Record node-level unique identifiers for NVIDIA and AMD GPUs as
  CUDA and OpenCL location properties to separate devices in a
  multi-GPU environment.
- A new mutex implementation based on atomic intrinsics replaces all
  existing mutex implementations.
- Change default of CUDA instrumentation to force a flush of CUDA
  activity buffers at program exit. This should resolve issues with
  measurements failing to include CUDA activity.
  `SCOREP_CUDA_ENABLE=flushatexit` is deprecated and replaced with the
  new `SCOREP_CUDA_ENABLE=dontflushatexit` option for programs that already
  perform a device synchronize or reset before exit and don't need an
  additional flush.

User tools and API improvements and changes:

- Remove the configure option `--with-extra-instrumentation-flags`.
  It was introduced to work around GCC compiler instrumentation issues
  that vanished with the advent of the recommended GCC compiler
  instrumentation plug-in.
- Remove the instrumenter option `--config=<file>` as it was
  considered of little use.